Add ability to create sale
* UI is still simple table
* "Normal" controllers and views
* Also add Capybara to test, but for now without JS driver

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,8 +16,8 @@ Style/StringLiterals:
 
 Style/FrozenStringLiteralComment:
   Enabled: false
-  
-Syntax/HashSyntax:
+
+Style/HashSyntax:
   EnforcedStyle: no_mixed_keys
 
 Layout/AlignHash:
