Add ability to change a sale's stage in the funnel
* Simplify sale stage modelling to make it easier to check whether a stage is ahead of other or not
* Only allows progression of stages
* Still simple "normal" views
* Add factory bot

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,6 +20,16 @@ Style/FrozenStringLiteralComment:
 Style/HashSyntax:
   EnforcedStyle: no_mixed_keys
 
+Style/SymbolArray:
+  Enabled: false
+
+Style/GuardClause:
+  Enabled: false
+
 Layout/AlignHash:
   EnforcedHashRocketStyle: table
   EnforcedLastArgumentHashStyle: ignore_implicit
+
+Metrics/BlockLength:
+  ExcludedMethods:
+    - describe
