remove redux and react-redux

--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react-redux": "^5.1.0",
-    "react_ujs": "^2.4.4",
-    "redux": "^4.0.1"
+    "react_ujs": "^2.4.4"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
