--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react_ujs": "^2.4.4"
+    "react-redux": "^5.1.0",
+    "react_ujs": "^2.4.4",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
