--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.6.1",
     "react-redux": "^5.1.0",
     "react_ujs": "^2.4.4",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
