--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-redux": "^5.1.0",
     "react_ujs": "^2.4.4",
     "redux": "^4.0.1",
-    "redux-logger": "^3.0.6"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
